[package]
name = "fhmp-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {version = "1.0"}
chrono = {version = "0.4", features = ["serde"]}
config = {version = "0.13", default-features = false, features = ["toml"]}
ctrlc  = {version = "3.2"}
dialoguer = {version = "0.10", features = ["fuzzy-select"]}
hex = {version = "0.4"}
serde = {version = "1.0", features = ["derive"]}
serde_yaml = {version = "0.8"}
serde_json = {version = "1.0"}
sha3 = {version = "0.10"}
sqlite = {version = "0.26"}
thiserror = {version = "1.0"}
uuid = {version = "1.0", features = ["v4", "serde"]}
