[package]
name = "fhmp-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = {version = "0.4", features = ["serde"]}
config = {version = "0.13", default-features = false, features = ["toml"]}
ctrlc  = "3.2"
dialoguer = {version = "0.10", features = ["fuzzy-select"]}
hex = "0.4"
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
serde_json = "1.0"
sha3 = "0.10"
sqlite = "0.26"
thiserror = "1.0"
uuid = {version = "1.0", features = ["v4", "serde"]}

[dev-dependencies]
indoc = "1.0"
